<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_track_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_track_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_track_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/backgroundDarkerThemeColor"
        android:maxLines="1"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:text="@string/default_title"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sb_track_progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/sb_track_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundDarkerThemeColor"
        android:padding="2dp"
        app:layout_constraintBottom_toTopOf="@+id/buttons_holder" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/buttons_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundDarkerThemeColor"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_left_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_marginTop="2dp"
            android:text="@string/default_time"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ib_rewind"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/rewind_button_descr"
            android:background="@drawable/baseline_fast_rewind_white_48"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ib_play_pause"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ib_play_pause"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/playe_pause_button_descr"
            android:background="@drawable/baseline_play_arrow_white_48"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ib_forward"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ib_rewind"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ib_forward"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/forward_button_descr"
            android:background="@drawable/baseline_fast_forward_white_48"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ib_play_pause"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>